Builds out map component with funcioning geocode markers and popups from seed data. Also adds CSS to index, new, and show page.

--- a/src/pages/new/mineralNew.css
+++ b/src/pages/new/mineralNew.css
@@ -13,8 +13,7 @@
 }
 
 #newMineralForm {
-   height: 40%;
-   width: 60%;
+   padding: 2%;
    display: flex;
    justify-content: center;
    align-items: center;
