--- a/src/pages/index/mineralIndex.css
+++ b/src/pages/index/mineralIndex.css
@@ -8,8 +8,10 @@
 }
 
 #mineralImg {
-    height: 150px;
-    /* width: auto; */
+    min-height: 250px;
+    min-width: 250px;
+    max-width: 250px;
+    max-height: 250px;
     border-radius: 5%;
     min-height: 100px;
 
@@ -18,6 +20,7 @@
 #indexInstruct {
     color: gold;
     font-family: 'Hanalei Fill', cursive;
+    font-size: 120%;
 }
 
 #mapButton {
@@ -44,6 +47,7 @@
 #mineralDiv {
     display: flex;
     flex-direction: column;
+    text-align: center;
     /* align-items: center; */
     /* background-color: red; */
 }
